--- a/users-api.yaml
+++ b/users-api.yaml
@@ -1,21 +1,20 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: petstore
-  description: The petstore API
+  name: users-api
+  description: The Users API
   tags:
-    - store
-    - rest
+    - users
   links:
-    - url: https://github.com/swagger-api/swagger-petstore
+    - url: https://github.com/efalisotamerat/hello-nestjs
       title: GitHub Repo
       icon: github
-    - url: https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml
+    - url: https://github.com/efalisotamerat/hello-nestjs/blob/main/oa.yaml
       title: API Spec
       icon: code
 spec:
   type: openapi
   lifecycle: experimental
-  owner: team-c
+  owner: guests
   definition:
-    $text: ./petstore.oas.yaml
+    $text: ./oa.yaml
