--- a/users-api.yaml
+++ b/users-api.yaml
@@ -4,7 +4,7 @@ metadata:
   name: users-api
   description: The Users API
   tags:
-    - users
+    - nonsens
   links:
     - url: https://github.com/efalisotamerat/hello-nestjs
       title: GitHub Repo
